--- a/GaleryFeed.html
+++ b/GaleryFeed.html
@@ -2,50 +2,150 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>Document</title>
 </head>
 
 <body>
 
-    <div class="container bg-primary">
+  <div class="container">
 
-        <div class="row" style="padding: 10px;">
-            <div class="col-6">
-                <img src="./img/perrito.png" alt="" width="568px" height="250px">
+    <div class="row" style="background-color:aquamarine;">
+      <!-- primera fila abre -->
+      <div class="col-sm-3"></div>
+
+      <div class="col-sm-3" style="padding-top: 5px;"><i class="fab fa-instagram"></i> Instagram</div>
+
+      <div class="col-sm-1">
+        <!-- Button trigger modal -->
+       <!-- Button trigger modal -->
+       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Create New Post</button>
+       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel"></h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="col-6">
-                <img src="./img/gato.jfif" alt="" width="453px" height="250px">
+            <div class="modal-body">
+              <form>
+                
+                <div class="mb-3">
+                  <label for="message-text" class="col-form-label">Message:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                  <img src="./img/camera-fill.svg" alt="">
+                  <img src="./img/geo-alt-fill.svg" alt="">
+                </div>
+              </form>
             </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+              <button type="button" class="btn btn-primary">Send</button>
+
+            </div>
+          </div>
         </div>
+      </div>
 
-        <div class="row"  style="padding: 10px;">
-            <div class="col-6">
-                <img src="./img/ave.jfif" alt="" width="568px" height="250px">
-            </div>
-            <div class="col-6">
-                <img src="./img/ave.jfif" alt="" width="453px" height="250px">
-            </div>
 
+      </div>
+      <div class="col-sm-1">
+
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="./img/nut.svg" alt="">
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
         </div>
+      </div>
+    </div>
+    <!-- primera fila cierre -->
+
+
+
+    <div class="row">
+      <!-- segunda fila botones gripp inicio-->
+      <div class="col-sm-5"></div>
+
+
+      <div class="col-sm-2">
+        <nav class="navbar">
+
+          <a class="navbar-brand" href="./GaleryFeed.html">
+            <img src="./img/grid-3x3-gap-fill.svg" alt="" width="30" height="24"></i>
+            <a class="navbar-brand" href="./index.html" style="margin-right: 80px;">
+              <img src="./img/negroo.png" alt="" width="15" height="15"></i>
+            </a>
+
+
+          </a>
+
+
+        </nav>
+
+
+
+      </div>
+
+
+      <!-- segunda fila botones gripp inicio-->
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-        integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-        integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-        crossorigin="anonymous"></script>
+
+    <div class="row" style="padding-bottom: 10px;">
+
+      <div class="col-sm-4">
+        <img src="./img/condor.jfif" alt="" width="440" height="312px" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+        <img src="./img/lobo.jfif" alt="" width="440px" height="312px" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+        <img src="./img/cahalote.jfif" alt="" width="440px" height="312px" class="img-fluid">
+      </div>
+
+    </div>
+
+    <div class="row" style="padding-bottom: 10px;">
+
+      <div class="col-sm-4">
+        <img src="./img/gato.jfif" alt="" width="440" height="312px" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+        <img src="./img/toro.jfif" alt="" width="440px" height="312px" class="img-fluid">
+      </div>
+      <div class="col-sm-4">
+        <img src="./img/ave.jfif" alt="" width="440px" height="312px" class="img-fluid">
+      </div>
+
+    </div>
+
+  </div>
+
+
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
+    integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
+    crossorigin="anonymous"></script>
 
 </body>
 
