--- a/GaleryFeed.html
+++ b/GaleryFeed.html
@@ -10,23 +10,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Document</title>
+  <title>Galery Fedd</title>
 </head>
 
 <body>
 
   <div class="container">
 
-    <div class="row" style="background-color:aquamarine;">
+    <div class="row" style="background-color: darkgrey;">
       <!-- primera fila abre -->
       <div class="col-sm-3"></div>
 
-      <div class="col-sm-3" style="padding-top: 5px;"><i class="fab fa-instagram"></i> Instagram</div>
+      <div class="col-sm-3" style="padding-top: 10px;"><i class="fab fa-instagram"></i> Instagram</div>
 
       <div class="col-sm-1">
         <!-- Button trigger modal -->
        <!-- Button trigger modal -->
-       <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Create New Post</button>
+       <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">New Post</button>
        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -82,23 +82,20 @@
 
       <div class="col-sm-2">
         <nav class="navbar">
+          <div class="enlaces" style="display: flex;justify-content: center;">
+            <div class="link1">
+              <a class="navbar-brand" href="./GaleryFeed.html">
+                <img src="./img/grid-3x3-gap-fill.svg" alt="" width="30" height="24"></i> </a>
 
-          <a class="navbar-brand" href="./GaleryFeed.html">
-            <img src="./img/grid-3x3-gap-fill.svg" alt="" width="30" height="24"></i>
-            <a class="navbar-brand" href="./index.html" style="margin-right: 80px;">
-              <img src="./img/negroo.png" alt="" width="15" height="15"></i>
-            </a>
+            </div>
 
-
-          </a>
-
-
+            <div class="link2">
+              <a class="navbar-brand" href="./index.html" style="margin-right: 80px;">
+                <img src="./img/negroo.png" alt="" width="15" height="15"></i>
+              </a>
+            </div>
+          </div>
         </nav>
-
-
-
-      </div>
-
 
       <!-- segunda fila botones gripp inicio-->
     </div>
