--- a/GaleryFeed.html
+++ b/GaleryFeed.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="styles.css">
   <title>Galery Fedd</title>
 </head>
 
@@ -23,54 +24,66 @@
 
       <div class="col-sm-3" style="padding-top: 10px;"><i class="fab fa-instagram"></i> Instagram</div>
 
-      <div class="col-sm-1">
-        <!-- Button trigger modal -->
-       <!-- Button trigger modal -->
-       <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">New Post</button>
-       <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel"></h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <form>
-                
-                <div class="mb-3">
-                  <label for="message-text" class="col-form-label">Message:</label>
-                  <textarea class="form-control" id="message-text"></textarea>
-                  <img src="./img/camera-fill.svg" alt="">
-                  <img src="./img/geo-alt-fill.svg" alt="">
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-              <button type="button" class="btn btn-primary">Send</button>
+      <div class="col-sm-6" style="display: flex;">
 
+        <div class="botopost">
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            data-bs-whatever="@mdo">Create New Post</button>
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel"></h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <form>
+
+                    <div class="mb-3">
+                      <label for="message-text" class="col-form-label">Message:</label>
+                      <textarea class="form-control" id="message-text"></textarea>
+                      <img src="./img/camera-fill.svg" alt="">
+                      <img src="./img/geo-alt-fill.svg" alt="">
+                    </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-primary">Send</button>
+
+                </div>
+              </div>
             </div>
+
+
           </div>
         </div>
-      </div>
-
-
-      </div>
-      <div class="col-sm-1">
-
-        <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="./img/nut.svg" alt="">
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+        
+        <div class="botos-action">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="./img/nut.svg" alt="">
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
         </div>
+
       </div>
+
     </div>
+
+
+  </div>
+  
+
+
     <!-- primera fila cierre -->
 
 
@@ -97,52 +110,48 @@
           </div>
         </nav>
 
-      <!-- segunda fila botones gripp inicio-->
+        <!-- segunda fila botones gripp inicio-->
+      </div>
+
+
+      <div class="row" style="padding-bottom: 10px;">
+
+        <div class="col-sm-4">
+          <img src="./img/condor.jfif" alt="" width="440" height="312px" class="img-fluid">
+        </div>
+        <div class="col-sm-4">
+          <img src="./img/lobo.jfif" alt="" width="440px" height="312px" class="img-fluid">
+        </div>
+        <div class="col-sm-4">
+          <img src="./img/serpiente.jfif" alt="" width="440px" height="312px" class="img-fluid">
+        </div>
+
+      </div>
+
+      <div class="row">
+
+        <div class="col-sm-4">
+          <img src="./img/gato.jfif" alt="" width="440" height="312px" class="img-fluid">
+        </div>
+        <div class="col-sm-4">
+          <img src="./img/toro.jfif" alt="" width="440px" height="312px" class="img-fluid">
+        </div>
+        <div class="col-sm-4">
+          <img src="./img/loro.jfif" alt="" width="440px" height="100%" class="img-fluid">
+        </div>
+
+      </div>
+
     </div>
 
 
-    <div class="row" style="padding-bottom: 10px;">
+  
 
-      <div class="col-sm-4">
-        <img src="./img/condor.jfif" alt="" width="440" height="312px" class="img-fluid">
-      </div>
-      <div class="col-sm-4">
-        <img src="./img/lobo.jfif" alt="" width="440px" height="312px" class="img-fluid">
-      </div>
-      <div class="col-sm-4">
-        <img src="./img/cahalote.jfif" alt="" width="440px" height="312px" class="img-fluid">
-      </div>
-
-    </div>
-
-    <div class="row" style="padding-bottom: 10px;">
-
-      <div class="col-sm-4">
-        <img src="./img/gato.jfif" alt="" width="440" height="312px" class="img-fluid">
-      </div>
-      <div class="col-sm-4">
-        <img src="./img/toro.jfif" alt="" width="440px" height="312px" class="img-fluid">
-      </div>
-      <div class="col-sm-4">
-        <img src="./img/ave.jfif" alt="" width="440px" height="312px" class="img-fluid">
-      </div>
-
-    </div>
-
-  </div>
-
-
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"
-    integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/"
-    crossorigin="anonymous"></script>
+  
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"></script>
 
 </body>
 
