--- a/GaleryFeed.html
+++ b/GaleryFeed.html
@@ -16,13 +16,13 @@
 
 <body>
 
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row" style="background-color: darkgrey;">
       <!-- primera fila abre -->
       <div class="col-sm-3"></div>
 
-      <div class="col-sm-3" style="padding-top: 10px;"><i class="fab fa-instagram"></i> Instagram</div>
+      <div class="col-sm-3" style="padding-top: 10px;"><i class="fab fa-instagram" style="font-size: 30px;"></i> Instagram</div>
 
       <div class="col-sm-6" style="display: flex;">
 
