--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
 
     <div class="row" style="background-color: darkgrey;">
       <!-- primera fila abre -->
@@ -132,11 +132,11 @@
             <h2 style="float: left;">My Firts Photo</h2>
           </div>
           <div class="col-sm-2">
-            <h2>1/3</h2>
+          <h2 style="float: right;margin-right:auto">1/3</h2>
           </div>
         </div>
 
-        <img src="./img/perrito.png" alt="" width="700px" height="500px" class="img-fluid">
+        <img src="./img/perrito.png" alt="" width="800px" height="500px" class="img-fluid">
 
 
       </div>
@@ -155,9 +155,8 @@
                 <div>
                 <p><strong>8987 Likes</strong></p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat similique distinctio tempora enim esse
-                      quos
-                      fuga nihil? Nam, eligendi quaerat.</p>
+                    <p style="text-align: left;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat similique distinctio tempora enim esse
+                      quos fuga nihil? Nam, eligendi quaeratmmmmmmmmmmm</p>
           
                     <i class="fas fa-heart" style="font-size: 20px;"> Comments</i>
           
@@ -197,10 +196,10 @@
             <h2 style="float: left;">My Second Photo</h2>
           </div>
           <div class="col-sm-2">
-            <h2>2/3</h2>
+            <h2 style="float: right;margin-right: auto;">2/3</h2>
           </div>
         </div>
-        <img src="./img/gato.jfif" alt="" width="700px" height="500px" class="img-fluid">
+        <img src="./img/gato.jfif" alt="" width="800px" height="500px" class="img-fluid">
 
 
       </div>
@@ -213,8 +212,7 @@
           <p><strong>1233 Likes</strong></p>
 
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat similique distinctio tempora enim esse
-            quos
-            fuga nihil? Nam, eligendi quaerat.</p>
+            quos fuga nihil? Nam, eligendi quaerat.</p>
 
           <i class="fas fa-heart" style="font-size: 20px;"> Comments</i>
 
@@ -246,10 +244,10 @@
             <h2 style="float: left;">My third Photo</h2>
           </div>
           <div class="col-sm-2">
-            <h2>3/3</h2>
+            <h2 style="float: right;margin-right:auto">3/3</h2>
           </div>
         </div>
-        <img src="./img/ave.jfif" alt="" width="700px" height="500px" class="img-fluid">
+        <img src="./img/ave.jfif" alt="" width="800px" height="500px" class="img-fluid">
 
 
       </div>
